testsuite/tests/pmcheck/complete_sigs/completesig04.hs
module TyMismatch where

{-# COMPLETE Just, Left #-}
